--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Зарплатный анализ по грейдам</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@2.2.1"></script>
   <style>
     body { font-family: Arial, sans-serif; max-width: 1200px; margin: 20px auto; padding: 0 12px; background: #f9f9fb; }
     h1 { text-align: center; color: #333; }
@@ -17,6 +18,10 @@
     .grade-line { position: absolute; width: 4px; height: 100%; top: 0; left: 0; background-color: #000; cursor: ew-resize; z-index: 10; border-radius: 2px; box-shadow: 0 0 10px rgba(0,0,0,0.3); }
     .grade-label { position: absolute; bottom: 5px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.7); color: white; padding: 4px 8px; border-radius: 4px; font-size: 12px; white-space: nowrap; pointer-events: none; }
     .ruler-tick { position: absolute; bottom: 8px; font-size: 11px; color: #aaa; transform: translateX(-50%); }
+    #grades { display: flex; justify-content: space-around; margin-top: 20px; }
+    .grade-box { text-align: center; padding: 10px; background: #fff; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); width: 18%; }
+    .grade-box h3 { margin: 0; color: #333; }
+    .grade-box p { margin: 5px 0; color: #555; }
   </style>
 </head>
 <body>
@@ -42,18 +47,22 @@
     <div id="ruler"></div>
   </div>
 
+  <div id="grades"></div>
+
   <script>
     let allData = [];
     let chartInstance = null;
+    let currentStep = 20;
+    let currentLabels = [];
 
-    // Грейды и их цвета, включая финальную "End"
+    // Грейды
     const grades = [
       { name: "Intern", color: "#FF9800", value: 60 },
       { name: "Junior", color: "#4CAF50", value: 140 },
       { name: "Middle", color: "#2196F3", value: 280 },
       { name: "Senior", color: "#9C27B0", value: 500 },
       { name: "Lead", color: "#F44336", value: 800 },
-      { name: "End", color: "#000000", value: 1000 }
+      { name: "End", color: "#000000", value: 900 }
     ];
 
     function getQuarter(dateStr) {
@@ -74,6 +83,7 @@
       allData = await res.json();
       fillFilters(allData);
       renderChart();
+      calculateMedians();
     }
 
     function fillFilters(data) {
@@ -167,6 +177,62 @@
       });
     }
 
+    function getRangeForKey(key) {
+      if (key === 'less_5k') return { low: 0, high: 5 };
+      if (key === 'more_1000k') return { low: 1000, high: Infinity };
+      const [lStr, hStr] = key.split('_');
+      return { low: parseInt(lStr.replace('k', '')), high: parseInt(hStr.replace('k', '')) };
+    }
+
+    function calculateMedians() {
+      const data = filterData();
+      if (data.length === 0) return;
+
+      const gradeNames = grades.slice(0, -1).map(g => g.name);
+      const positions = grades.map(g => g.value);
+      const output = document.getElementById('grades');
+      output.innerHTML = '';
+
+      gradeNames.forEach((name, i) => {
+        const start = i === 0 ? 0 : positions[i];
+        const end = positions[i + 1];
+        const resPercentiles = collectPercentiles(data, 'res_percentiles_json', start, end);
+        const vacPercentiles = collectPercentiles(data, 'vac_percentiles_json', start, end);
+
+        const resMedian = resPercentiles.length ? median(resPercentiles) : 'N/A';
+        const vacMedian = vacPercentiles.length ? median(vacPercentiles) : 'N/A';
+
+        const box = document.createElement('div');
+        box.className = 'grade-box';
+        box.innerHTML = `
+          <h3>${name}</h3>
+          <p>Резюме: ${resMedian}</p>
+          <p>Вакансии: ${vacMedian}</p>
+        `;
+        output.appendChild(box);
+      });
+    }
+
+    function collectPercentiles(data, field, start, end) {
+      let allVals = [];
+      data.forEach(rec => {
+        const json = parseSalaryData(rec[field]);
+        for (const key in json) {
+          const { low, high } = getRangeForKey(key);
+          if (high <= start || low >= end) continue;
+          json[key].filter(v => v !== null).forEach(v => allVals.push(v));
+        }
+      });
+      return allVals;
+    }
+
+    function median(arr) {
+      if (arr.length === 0) return null;
+      arr.sort((a,b) => a - b);
+      const mid = Math.floor(arr.length / 2);
+      return arr.length % 2 === 0 ? (arr[mid - 1] + arr[mid]) / 2 : arr[mid];
+    }
+
     function renderChart() {
       const data = filterData();
 
@@ -202,20 +268,38 @@
         baseVacancies[range] = vCnt ? vSum / vCnt : 0;
       });
 
-      const step = parseInt(document.getElementById('stepFilter').value) || 20;
+      currentStep = parseInt(document.getElementById('stepFilter').value) || 20;
 
-      const aggResumes = aggregateData(baseResumes, step);
-      const aggVacancies = aggregateData(baseVacancies, step);
+      const aggResumes = aggregateData(baseResumes, currentStep);
+      const aggVacancies = aggregateData(baseVacancies, currentStep);
       const rawLabels = Object.keys(aggResumes);
-      const niceLabels = formatLabels(rawLabels, step);
+      currentLabels = formatLabels(rawLabels, currentStep);
 
       const ctx = document.getElementById('chart').getContext('2d');
       if (chartInstance) chartInstance.destroy();
 
+      // Annotations для заливок
+      const annotations = [];
+      let prev = 0;
+      grades.slice(0, -1).forEach((g, i) => {
+        const xMin = currentLabels.findIndex(l => parseInt(l) >= prev || l.startsWith('до') || l === 'выше 1000');
+        const xMax = currentLabels.findIndex(l => parseInt(l) >= g.value || l.startsWith('до') || l === 'выше 1000');
+        annotations.push({
+          type: 'box',
+          xMin: xMin - 0.5,
+          xMax: xMax + 0.5,
+          yMin: 0,
+          yMax: 'max',
+          backgroundColor: hexToRgba(g.color, 0.1),
+          borderWidth: 0
+        });
+        prev = g.value;
+      });
+
       chartInstance = new Chart(ctx, {
         type: 'bar',
         data: {
-          labels: niceLabels,
+          labels: currentLabels,
           datasets: [
             {
               label: 'Резюме %',
@@ -242,7 +326,10 @@
           ]
         },
         options: {
-          plugins: { legend: { position: 'top' } },
+          plugins: {
+            legend: { position: 'top' },
+            annotation: { annotations }
+          },
           scales: {
             x: { ticks: { autoSkip: false, maxRotation: 90, minRotation: 90 } },
             y: { beginAtZero: true }
@@ -253,65 +340,75 @@
         }
       });
 
-      // Очистка ruler
+      // Ruler
       const ruler = document.getElementById('ruler');
       ruler.innerHTML = '';
-
-      // Создание ticks на ruler
       const containerWidth = document.getElementById('chart-container').clientWidth;
-      const numBuckets = niceLabels.length;
-      for (let i = 0; i < numBuckets; i++) {
+      currentLabels.forEach((label, i) => {
         const tick = document.createElement('div');
         tick.className = 'ruler-tick';
-        tick.style.left = `${(i / (numBuckets - 1)) * 100}%`;
-        tick.textContent = niceLabels[i];
+        tick.style.left = `${(i / (currentLabels.length - 1)) * 100}%`;
+        tick.textContent = label;
         ruler.appendChild(tick);
-      }
+      });
 
-      // Создание линий поверх графика
+      // Линии
       const container = document.getElementById('chart-container');
       grades.forEach((g, i) => {
-        const line = document.createElement('div');
-        line.className = 'grade-line';
-        line.style.backgroundColor = g.color;
-        line.dataset.index = i;
+        let line = document.getElementById(`grade-line-${i}`);
+        if (!line) {
+          line = document.createElement('div');
+          line.id = `grade-line-${i}`;
+          line.className = 'grade-line';
+          line.style.backgroundColor = g.color;
+          line.dataset.index = i;
 
-        const label = document.createElement('div');
-        label.className = 'grade-label';
-        label.textContent = g.name;
+          const label = document.createElement('div');
+          label.className = 'grade-label';
+          label.textContent = g.name;
+          line.appendChild(label);
 
-        line.appendChild(label);
-        container.appendChild(line);
+          container.appendChild(line);
 
-        updateLinePosition(line, g, containerWidth, step);
-
-        // Перетаскивание
-        let dragging = false;
-        line.addEventListener('mousedown', (e) => {
-          dragging = true;
-          e.preventDefault();
-        });
-        document.addEventListener('mousemove', (e) => {
-          if (!dragging) return;
-          const rect = container.getBoundingClientRect();
-          let newX = e.clientX - rect.left;
-          newX = Math.max(0, Math.min(containerWidth, newX));
-          const newPercent = newX / containerWidth;
-          g.value = Math.round(newPercent * 1000 / step) * step;
-          updateLinePosition(line, g, containerWidth, step);
-        });
-        document.addEventListener('mouseup', () => dragging = false);
+          // Drag
+          let dragging = false;
+          line.addEventListener('mousedown', e => { dragging = true; e.preventDefault(); });
+          document.addEventListener('mousemove', e => {
+            if (!dragging) return;
+            const rect = container.getBoundingClientRect();
+            let newX = e.clientX - rect.left;
+            newX = Math.max(0, Math.min(containerWidth, newX));
+            const newPercent = newX / containerWidth;
+            g.value = Math.round(newPercent * 1000 / currentStep) * currentStep;
+            g.value = Math.min(1000, Math.max(0, g.value));
+            line.style.left = `${newX}px`;
+          });
+          document.addEventListener('mouseup', () => {
+            if (dragging) {
+              dragging = false;
+              renderChart();
+              calculateMedians();
+            }
+          });
+        }
+        const percent = g.value / 1000;
+        line.style.left = `${percent * containerWidth}px`;
       });
     }
 
-    function updateLinePosition(line, g, width, step) {
-      const percent = g.value / 1000;
-      line.style.left = `${percent * width}px`;
+    function hexToRgba(hex, alpha) {
+      const r = parseInt(hex.slice(1, 3), 16);
+      const g = parseInt(hex.slice(3, 5), 16);
+      const b = parseInt(hex.slice(5, 7), 16);
+      return `rgba(${r}, ${g}, ${b}, ${alpha})`;
     }
 
     window.addEventListener('DOMContentLoaded', () => {
       ['vacancyFilter','cityFilter','quarterFilter','stepFilter'].forEach(id => {
-        document.getElementById(id).addEventListener('change', renderChart);
+        document.getElementById(id).addEventListener('change', () => {
+          renderChart();
+          calculateMedians();
+        });
       });
       loadData();
     });
