--- a/static/index.html
+++ b/static/index.html
@@ -5,14 +5,13 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Зарплатный анализ по грейдам</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@2.2.1"></script>
   <style>
     body { font-family: Arial, sans-serif; max-width: 1200px; margin: 20px auto; padding: 0 12px; background: #f9f9fb; }
     h1 { text-align: center; color: #333; }
     .controls { margin: 20px 0; text-align: center; }
     .controls label { margin: 0 10px; font-weight: bold; }
     select { padding: 6px; border-radius: 6px; border: 1px solid #ccc; }
-    #chart-container { position: relative; width: 100%; max-width: 1000px; height: 500px; margin: 30px auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); overflow: hidden; }
+    #chart-container { position: relative; width: 100%; height: 500px; margin: 30px auto; background: white; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); overflow: hidden; }
     #chart { height: calc(100% - 50px); width: 100%; }
     #ruler { height: 50px; background: #222; position: relative; border-bottom-left-radius: 12px; border-bottom-right-radius: 12px; }
     .grade-line { position: absolute; width: 4px; height: 100%; top: 0; left: 0; background-color: #000; cursor: ew-resize; z-index: 10; border-radius: 2px; box-shadow: 0 0 10px rgba(0,0,0,0.3); }
@@ -52,10 +51,8 @@
   <script>
     let allData = [];
     let chartInstance = null;
-    let currentStep = 20;
-    let currentLabels = [];
 
-    // Грейды
+    // Грейды и их цвета, включая финальную "End"
     const grades = [
       { name: "Intern", color: "#FF9800", value: 60 },
       { name: "Junior", color: "#4CAF50", value: 140 },
@@ -83,7 +80,6 @@
       allData = await res.json();
       fillFilters(allData);
       renderChart();
-      calculateMedians();
     }
 
     function fillFilters(data) {
@@ -177,62 +173,6 @@
       });
     }
 
-    function getRangeForKey(key) {
-      if (key === 'less_5k') return { low: 0, high: 5 };
-      if (key === 'more_1000k') return { low: 1000, high: Infinity };
-      const [lStr, hStr] = key.split('_');
-      return { low: parseInt(lStr.replace('k', '')), high: parseInt(hStr.replace('k', '')) };
-    }
-
-    function calculateMedians() {
-      const data = filterData();
-      if (data.length === 0) return;
-
-      const gradeNames = grades.slice(0, -1).map(g => g.name);
-      const positions = grades.map(g => g.value);
-      const output = document.getElementById('grades');
-      output.innerHTML = '';
-
-      gradeNames.forEach((name, i) => {
-        const start = i === 0 ? 0 : positions[i];
-        const end = positions[i + 1];
-        const resPercentiles = collectPercentiles(data, 'res_percentiles_json', start, end);
-        const vacPercentiles = collectPercentiles(data, 'vac_percentiles_json', start, end);
-
-        const resMedian = resPercentiles.length ? median(resPercentiles) : 'N/A';
-        const vacMedian = vacPercentiles.length ? median(vacPercentiles) : 'N/A';
-
-        const box = document.createElement('div');
-        box.className = 'grade-box';
-        box.innerHTML = `
-          <h3>${name}</h3>
-          <p>Резюме: ${resMedian}</p>
-          <p>Вакансии: ${vacMedian}</p>
-        `;
-        output.appendChild(box);
-      });
-    }
-
-    function collectPercentiles(data, field, start, end) {
-      let allVals = [];
-      data.forEach(rec => {
-        const json = parseSalaryData(rec[field]);
-        for (const key in json) {
-          const { low, high } = getRangeForKey(key);
-          if (high <= start || low >= end) continue;
-          json[key].filter(v => v !== null).forEach(v => allVals.push(v));
-        }
-      });
-      return allVals;
-    }
-
-    function median(arr) {
-      if (arr.length === 0) return null;
-      arr.sort((a,b) => a - b);
-      const mid = Math.floor(arr.length / 2);
-      return arr.length % 2 === 0 ? (arr[mid - 1] + arr[mid]) / 2 : arr[mid];
-    }
-
     function renderChart() {
       const data = filterData();
 
@@ -268,38 +208,39 @@
         baseVacancies[range] = vCnt ? vSum / vCnt : 0;
       });
 
-      currentStep = parseInt(document.getElementById('stepFilter').value) || 20;
+      const step = parseInt(document.getElementById('stepFilter').value) || 20;
 
-      const aggResumes = aggregateData(baseResumes, currentStep);
-      const aggVacancies = aggregateData(baseVacancies, currentStep);
+      const aggResumes = aggregateData(baseResumes, step);
+      const aggVacancies = aggregateData(baseVacancies, step);
       const rawLabels = Object.keys(aggResumes);
-      currentLabels = formatLabels(rawLabels, currentStep);
+      const niceLabels = formatLabels(rawLabels, step);
+
+      // Sort grades by value to ensure order
+      grades.sort((a, b) => a.value - b.value);
+
+      // Annotations for fills
+      const annotations = [];
+      for (let i = 0; i < grades.length - 1; i++) {
+        const startIdx = niceLabels.findIndex(l => parseInt(l) >= grades[i].value || l === 'выше 1000' || l.startsWith('до'));
+        const endIdx = niceLabels.findIndex(l => parseInt(l) >= grades[i+1].value || l === 'выше 1000' || l.startsWith('до'));
+        annotations.push({
+          type: 'box',
+          xMin: startIdx,
+          xMax: endIdx,
+          yMin: 0,
+          yMax: 'max',
+          backgroundColor: grades[i].color + '1A', // 10% opacity
+          borderWidth: 0
+        });
+      }
 
       const ctx = document.getElementById('chart').getContext('2d');
       if (chartInstance) chartInstance.destroy();
 
-      // Annotations для заливок
-      const annotations = [];
-      let prev = 0;
-      grades.slice(0, -1).forEach((g, i) => {
-        const xMin = currentLabels.findIndex(l => parseInt(l) >= prev || l.startsWith('до') || l === 'выше 1000');
-        const xMax = currentLabels.findIndex(l => parseInt(l) >= g.value || l.startsWith('до') || l === 'выше 1000');
-        annotations.push({
-          type: 'box',
-          xMin: xMin - 0.5,
-          xMax: xMax + 0.5,
-          yMin: 0,
-          yMax: 'max',
-          backgroundColor: hexToRgba(g.color, 0.1),
-          borderWidth: 0
-        });
-        prev = g.value;
-      });
-
       chartInstance = new Chart(ctx, {
         type: 'bar',
         data: {
-          labels: currentLabels,
+          labels: niceLabels,
           datasets: [
             {
               label: 'Резюме %',
@@ -326,13 +267,10 @@
           ]
         },
         options: {
-          plugins: {
-            legend: { position: 'top' },
-            annotation: { annotations }
-          },
-          scales: {
-            x: { ticks: { autoSkip: false, maxRotation: 90, minRotation: 90 } },
-            y: { beginAtZero: true }
+          plugins: { legend: { position: 'top' }, annotation: { annotations } },
+          scales: { 
+            x: { ticks: { autoSkip: false, maxRotation: 90, minRotation: 90 } }, 
+            y: { beginAtZero: true } 
           },
           interaction: { mode: 'index', intersect: false },
           responsive: true,
@@ -340,75 +278,116 @@
         }
       });
 
-      // Ruler
+      // Ruler ticks
       const ruler = document.getElementById('ruler');
       ruler.innerHTML = '';
       const containerWidth = document.getElementById('chart-container').clientWidth;
-      currentLabels.forEach((label, i) => {
+      niceLabels.forEach((label, i) => {
         const tick = document.createElement('div');
         tick.className = 'ruler-tick';
-        tick.style.left = `${(i / (currentLabels.length - 1)) * 100}%`;
+        tick.style.left = `${(i / (niceLabels.length - 1)) * 100}%`;
         tick.textContent = label;
         ruler.appendChild(tick);
       });
 
-      // Линии
+      // Lines
       const container = document.getElementById('chart-container');
       grades.forEach((g, i) => {
-        let line = document.getElementById(`grade-line-${i}`);
-        if (!line) {
-          line = document.createElement('div');
-          line.id = `grade-line-${i}`;
-          line.className = 'grade-line';
-          line.style.backgroundColor = g.color;
-          line.dataset.index = i;
+        const line = document.createElement('div');
+        line.className = 'grade-line';
+        line.style.backgroundColor = g.color;
+        line.dataset.index = i;
 
-          const label = document.createElement('div');
-          label.className = 'grade-label';
-          label.textContent = g.name;
-          line.appendChild(label);
+        const label = document.createElement('div');
+        label.className = 'grade-label';
+        label.textContent = g.name;
+        line.appendChild(label);
 
-          container.appendChild(line);
+        container.appendChild(line);
 
-          // Drag
-          let dragging = false;
-          line.addEventListener('mousedown', e => { dragging = true; e.preventDefault(); });
-          document.addEventListener('mousemove', e => {
-            if (!dragging) return;
-            const rect = container.getBoundingClientRect();
-            let newX = e.clientX - rect.left;
-            newX = Math.max(0, Math.min(containerWidth, newX));
-            const newPercent = newX / containerWidth;
-            g.value = Math.round(newPercent * 1000 / currentStep) * currentStep;
-            g.value = Math.min(1000, Math.max(0, g.value));
-            line.style.left = `${newX}px`;
-          });
-          document.addEventListener('mouseup', () => {
-            if (dragging) {
-              dragging = false;
-              renderChart();
-              calculateMedians();
-            }
-          });
-        }
         const percent = g.value / 1000;
         line.style.left = `${percent * containerWidth}px`;
+
+        // Drag with limits
+        let dragging = false;
+        line.addEventListener('mousedown', e => { dragging = true; e.preventDefault(); });
+        document.addEventListener('mousemove', e => {
+          if (!dragging) return;
+          const rect = container.getBoundingClientRect();
+          let newX = e.clientX - rect.left;
+          newX = Math.max(0, Math.min(containerWidth, newX));
+          let newValue = Math.round((newX / containerWidth) * 1000 / step) * step;
+
+          // Limits
+          const prevValue = i > 0 ? grades[i-1].value : 0;
+          const nextValue = i < grades.length - 1 ? grades[i+1].value : 1000;
+          newValue = Math.max(prevValue + step, Math.min(nextValue - step, newValue));
+
+          g.value = newValue;
+          line.style.left = `${newX}px`;
+        });
+        document.addEventListener('mouseup', () => {
+          if (dragging) {
+            dragging = false;
+            renderChart();
+            calculateMedians();
+          }
+        });
       });
     }
 
-    function hexToRgba(hex, alpha) {
-      const r = parseInt(hex.slice(1, 3), 16);
-      const g = parseInt(hex.slice(3, 5), 16);
-      const b = parseInt(hex.slice(5, 7), 16);
-      return `rgba(${r}, ${g}, ${b}, ${alpha})`;
+    function calculateMedians() {
+      const data = filterData();
+      if (data.length === 0) return;
+
+      const output = document.getElementById('grades');
+      output.innerHTML = '';
+
+      for (let i = 0; i < grades.length - 1; i++) {
+        const start = grades[i].value;
+        const end = grades[i+1].value;
+
+        const percentiles = [];
+        data.forEach(rec => {
+          ['res_percentiles_json', 'vac_percentiles_json'].forEach(field => {
+            const json = parseSalaryData(rec[field]);
+            for (const key in json) {
+              const { low, high } = getRangeForKey(key);
+              if (high <= start || low >= end) continue;
+              json[key].filter(v => v !== null).forEach(v => percentiles.push(v));
+            }
+          });
+        });
+
+        const med = percentiles.length ? median(percentiles) : 'N/A';
+
+        const box = document.createElement('div');
+        box.className = 'grade-box';
+        box.innerHTML = `
+          <h3>${grades[i].name}</h3>
+          <p>Медиана: ${med}</p>
+        `;
+        output.appendChild(box);
+      }
+    }
+
+    function getRangeForKey(key) {
+      if (key === 'less_5k') return { low: 0, high: 5 };
+      if (key === 'more_1000k') return { low: 1000, high: Infinity };
+      const [lStr, hStr] = key.split('_').map(x => parseInt(x.replace('k','')));
+      return { low: lStr, high: hStr };
+    }
+
+    function median(arr) {
+      arr = arr.filter(v => v != null).sort((a, b) => a - b);
+      if (arr.length === 0) return 'N/A';
+      const mid = Math.floor(arr.length / 2);
+      return arr.length % 2 === 0 ? (arr[mid - 1] + arr[mid]) / 2 : arr[mid];
     }
 
     window.addEventListener('DOMContentLoaded', () => {
       ['vacancyFilter','cityFilter','quarterFilter','stepFilter'].forEach(id => {
-        document.getElementById(id).addEventListener('change', () => {
-          renderChart();
-          calculateMedians();
-        });
+        document.getElementById(id).addEventListener('change', renderChart);
       });
       loadData();
     });
